--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Floating Cards</title>
 </head>
 <body>
@@ -42,9 +42,9 @@
                         <img src="./img/female1.png" alt="Laura Rossi">    
                     </div>    
                     <div class="info">
-                        <h4></h4>
-                        <p></p>
-                        <p></p>
+                        <h4>LAURA ROSSI</h4>
+                        <p>Front-end Developer</p>
+                        <p>laurarossi@team.com</p>
                     </div> 
                 </div>
 
@@ -53,9 +53,9 @@
                         <img src="./img/male2.png" alt="Giorgio Verdi">    
                     </div>    
                     <div class="info">
-                        <h4></h4>
-                        <p></p>
-                        <p></p>
+                        <h4>GIORGIO VERDI</h4>
+                        <p>Back-end Developer</p>
+                        <p>giorgioverdi@team.com</p>
                     </div> 
                 </div>
 
@@ -64,9 +64,9 @@
                         <img src="./img/female2.png" alt="Marta ipsum">    
                     </div>  
                     <div class="info">
-                        <h4></h4>
-                        <p></p>
-                        <p></p>
+                        <h4>MARTA IPSUM</h4>
+                        <p>SEO Specialist</p>
+                        <p>martaipsum@team.com</p>
                     </div>   
                 </div>
 
@@ -75,9 +75,9 @@
                         <img src="./img/male3.png" alt="Roberto Lorem">    
                     </div>    
                     <div class="info">
-                        <h4></h4>
-                        <p></p>
-                        <p></p>
+                        <h4>ROBERTO LOREM</h4>
+                        <p>Project Manager</p>
+                        <p>robertolorem@team.com</p>
                     </div> 
                 </div>
 
@@ -86,9 +86,9 @@
                         <img src="./img/female3.png" alt="Daniela Amet">    
                     </div>    
                     <div class="info">
-                        <h4></h4>
-                        <p></p>
-                        <p></p>
+                        <h4>DANIELA AMET</h4>
+                        <p>Analyst</p>
+                        <p>danielaamet@team.com</p>
                     </div> 
                 </div>    
             </div>
