--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                 </div>    
             </div>
         </section>     
-
+        <!-- Paragrafo finale -->
         <footer>
             <p>
-
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, voluptate consequuntur? Eos dolore dolorum quos dolores excepturi optio totam consectetur ex incidunt ea dolorem accusamus, atque corporis cum debitis hic.
             </p>
         </footer>
     </main>
