--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Schede -->
         <section>
             <div class="container clearfix">
-                <div class="card">
+                <div class="card clearfix">
                     <div class="image">
                         <img src="./img/male1.png" alt="Marco Bianchi"> 
                     </div>
