--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>             
                 </div>
 
-                <div class="card">
+                <div class="card clearfix">
                     <div class="image">
                         <img src="./img/female1.png" alt="Laura Rossi">    
                     </div>    
@@ -48,7 +48,7 @@
                     </div> 
                 </div>
 
-                <div class="card">
+                <div class="card clearfix">
                     <div class="image">
                         <img src="./img/male2.png" alt="Giorgio Verdi">    
                     </div>    
@@ -59,7 +59,7 @@
                     </div> 
                 </div>
 
-                <div class="card">
+                <div class="card clearfix">
                     <div class="image">
                         <img src="./img/female2.png" alt="Marta ipsum">    
                     </div>  
@@ -70,7 +70,7 @@
                     </div>   
                 </div>
 
-                <div class="card">
+                <div class="card clearfix">
                     <div class="image">
                         <img src="./img/male3.png" alt="Roberto Lorem">    
                     </div>    
@@ -81,7 +81,7 @@
                     </div> 
                 </div>
 
-                <div class="card">
+                <div class="card clearfix">
                     <div class="image">
                         <img src="./img/female3.png" alt="Daniela Amet">    
                     </div>    
